<resources>
<<<<<<< HEAD
    <string name="app_name">Notepad-=</string>
=======
    <string name="app_name">Notes</string>
>>>>>>> 655dcdcdf36281f4f4a6801feaf50a80ce241da1
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="title_text">Title</string>
    <string name="content_text">Content</string>
    <string name="add_title">Add Title</string>
    <string name="add_content">Add Content</string>
    <string name="add_note">Add Note</string>
    <string name="discard_note">Discard Note</string>
    <string name="search_notes">Search Notes</string>
    <string name="update_note">Update Note</string>
    <string name="discard_changes">Discard Changes</string>
</resources>
