<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            tools:ignore="Autofill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/note_title"
            android:hint="@string/add_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>
    <EditText
            tools:ignore="Autofill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/note_content"
            android:hint="@string/add_content"
            android:layout_margin="20dp"/>
    <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button_bar">
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/discard_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/discard_note" android:layout_weight="1"
                android:textColor="@android:color/black" android:textColorHighlight="@android:color/black"
                android:background="@android:color/holo_red_dark"/>
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_note"
                android:layout_weight="1" android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black" android:background="@android:color/holo_green_light"/>
    </LinearLayout>
</LinearLayout>